--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link href='normalize.css' rel='stylesheet' type='text/css' />
     </head>
 
     <body>
-        
+
     </body>
 </html>
