Create container div

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
 
     <body>
+        <div id="container">
+
+        </div>
 
         <script href='calculator.js' type='text/javascript'></script>
     </body>
