--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href='normalize.css' rel='stylesheet' type='text/css' />
-    <link href='calculator.css' rel='stylesheet' type='text/css' />
+    <link href="normalize.css" rel="stylesheet">
+    <link href="calculator.css" rel="stylesheet">
   </head>
 
   <body>
     <div id="container">
-
+      <div id="screen">0</div>
+      <div id="clear" class="btn">C</div>
+      <div id="divide" class="btn">%</div>
+      <div id="multiply" class="btn">*</div>
+      <div id="seven" class="number btn" data-value=7>7</div>
+      <div id="eight" class="number btn" data-value=8>8</div>
+      <div id="nine" class="number btn" data-value=9>9</div>
+      <div id="minus" class="btn">-</div>
+      <div id="four" class="number btn" data-value=4>4</div>
+      <div id="five" class="number btn" data-value=5>5</div>
+      <div id="six" class="number btn" data-value=6>6</div>
+      <div id="plus" class="btn">+</div>
+      <div id="one" class="number btn" data-value=1>1</div>
+      <div id="two" class="number btn" data-value=2>2</div>
+      <div id="three" class="number btn" data-value=3>3</div>
+      <div id="zero" class="number btn" data-value=0>0</div>
+      <div id="decimal" class="btn">.</div>
+      <div id="enter" class="btn">=</div>
     </div>
 
-    <script href='calculator.js' type='text/javascript'></script>
+    <script src="calculator.js"></script>
   </body>
 </html>
