Add number button and screen update logic

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div id="container">
-      <div id="screen">0</div>
+      <div id="screen"></div>
       <div id="clear" class="btn">C</div>
       <div id="divide" class="btn op" data-value="divide">/</div>
       <div id="multiply" class="btn op" data-value="multiply">*</div>
