Add equals button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="container">
       <div id="screen"></div>
       <div id="clear" class="btn">C</div>
+      <div id="backspace" class="btn">⌫</div>
       <div id="divide" class="btn op" data-value="divide">/</div>
       <div id="multiply" class="btn op" data-value="multiply">*</div>
       <div id="seven" class="number btn" data-value=7>7</div>
